# cash

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.md
src/: main.cpp  test.cpp
src/kernel/: algorithm.cpp  algorithm.h  block.cpp  block.h  chain.cpp  chain.h  provability.cpp  provability.h  script.cpp  script.h  storage.cpp  storage.h  wallet.cpp
src/layer/: control.h  format.h  rpc.cpp  types.hpp
src/oracle/: bitcoin.cpp  bitcoin.h  cardano.h  ripple.cpp  ripple.h  solana.cpp  stellar.h  tron.cpp  tron.h
src/oracle/forks/: bitcoin.cpp  bitcoin.h  ethereum.cpp  ethereum.h
src/policy/: storages.cpp  storages.h  transactions.cpp  typenames.cpp  typenames.h
src/tangent/internal/: base32.c  base58.c  base58.h  bignum.c  bip32.h  cardano.c  chacha_drbg.c  curves.c  ecdsa.c  nem.h  paillier.c  paillier.h  rand.cpp  rc4.c  segwit_addr.c  segwit_addr.h  sha2.h  zilliqa.c
src/tangent/internal/chacha20poly1305/: chacha_merged.c
src/tangent/internal/ed25519-donna/: ed25519-donna-impl-base.h  ed25519.c
src/tangent/internal/monero/: crypto.c  crypto.h  crypto_data.c
src/tangent/internal/sodium/private/: ed25519_ref10_fe_25_5.c
src/tangent/kernel/: algorithm.cpp  algorithm.h  block.cpp  block.h  cell.cpp  cell.h  chain.cpp  chain.h  mediator.cpp  mediator.h  observer.cpp  observer.h  oracle.cpp  oracle.h  provability.cpp  provability.h  script.cpp  script.h  storage.cpp  svm.cpp  svm.h  svm_abi.cpp  svm_abi.h  transaction.cpp  transaction.h  wallet.cpp  wallet.h  warden.cpp  warden.h
src/tangent/layer/: control.cpp  control.h  format.cpp  format.h  p2p.cpp  p2p.h  rpc.cpp  rpc.h  serialization.cpp  serialization.h  types.hpp
src/tangent/observer/: bitcoin.cpp  bitcoin.h  cardano.cpp  cardano.h  ethereum.cpp  ethereum.h  ripple.cpp  ripple.h  solana.cpp  solana.h  stellar.cpp  stellar.h  tron.cpp  tron.h
src/tangent/observer/forks/: bitcoin.cpp  bitcoin.h  ethereum.cpp  ethereum.h
src/tangent/oracle/: bitcoin.cpp  bitcoin.h  cardano.cpp  cardano.h  ethereum.cpp  ethereum.h  ripple.cpp  ripple.h  solana.cpp  solana.h  stellar.cpp  stellar.h  tron.cpp  tron.h
src/tangent/oracle/forks/: bitcoin.cpp  ethereum.cpp  ethereum.h
src/tangent/policy/: compositions.cpp  compositions.h  messages.cpp  messages.h  states.cpp  states.h  storages.cpp  transactions.cpp  transactions.h  typenames.cpp
src/tangent/service/: nds.cpp  nds.h  p2p.cpp  p2p.h  rpc.cpp  rpc.h
src/tangent/storage/: chainstate.cpp  chainstate.h  engine.cpp  engine.h  mempoolstate.cpp  mempoolstate.h  observerstate.cpp  observerstate.h  sidechainstate.cpp  sidechainstate.h
src/tangent/utils/protobuf/: TronInternal.pb.cc  TronInternal.pb.h
src/tangent/utils/tiny-bitcoin/: aes256_cbc.c  random.c  vector.c
src/tangent/utils/tiny-ethereum/: account.c  bloom.c
src/tangent/utils/tiny-xdr/: base32.c  decoder.c
src/tangent/utils/tiny-xrp/: base58.c
src/tangent/utils/trezor-crypto/: TrezorCrypto.h  base58.h  bignum.c  cardano.h  nano.c  ripemd160.c  shamir.c  zilliqa.h
src/tangent/utils/trezor-crypto/aes/: aeskey.c  aesopt.h
src/tangent/utils/trezor-crypto/ed25519-donna/: ed25519-donna-portable.h  ed25519-keccak.h  modm-donna-32bit.c
src/tangent/utils/trezor-crypto/monero/: monero.h
src/tangent/validator/: entrypoints.hpp
src/tangent/validator/backend/: bitcoin.cpp  bitcoin.h  cardano.cpp  cardano.h  ethereum.cpp  ethereum.h  monero.cpp  monero.h  ripple.cpp  ripple.h  solana.cpp  solana.h  stellar.cpp  stellar.h  tron.cpp  tron.h
src/tangent/validator/backend/forks/: bitcoin.cpp  bitcoin.h  ethereum.cpp  ethereum.h
src/tangent/validator/internal/libbitcoin/: base58.c  block.c  btc.h  chainparams.c  chainparams.h  commontools.c  ecc.h  ecc_key.c  (+13 more)
src/tangent/validator/service/: consensus.cpp  consensus.h  discovery.cpp  discovery.h  nds.cpp  nds.h  nss.cpp  nss.h  oracle.cpp  oracle.h  p2p.cpp  p2p.h  rpc.cpp  rpc.h
src/tangent/validator/storage/: chainstate.cpp  chainstate.h  engine.cpp  engine.h  mediatorstate.cpp  mediatorstate.h  mempoolstate.cpp  mempoolstate.h  oraclestate.cpp  oraclestate.h  wardenstate.cpp  wardenstate.h
src/utils/protobuf/: TronInternal.pb.cc  TronInternal.pb.h  TronInternal.proto
src/utils/tiny-bitcoin/: base58.c  base58.h  bip32.c  bip32.h  buffer.c  chainparams.c  chainparams.h  config.h  cstr.c  ecc_key.c  ecc_key.h  ecc_libsecp256k1.c  memory.c  ripemd160.c  script.h  taproot.c  taproot.h  tx.c  tx.h  utils.c
src/utils/tiny-bitcoincash/: cashaddr.h
src/utils/tiny-bitcoincash/util/: vector.h
src/utils/tiny-ethereum/: KeccakConfig.h  KeccakHash.h  KeccakP-1600-SnP.h  KeccakSponge.h  abi.c  ecdsa.c  ethc.h  hex.c  internals.cpp  internals.h  keccak256.c  keccak256.h  rlp.c  unit.c
src/utils/tiny-xdr/: base32.h  decoder.h  stellar.c  stellar.h
src/utils/trezor-crypto/: address.c  aes.h  base32.c  base58.c  bignum.h  bip32.c  bip39.c  bip39.h  blake256.c  blake2b.c  blake2s.c  curves.h  ecdsa.h  ed25519.h  groestl.c  groestl_internal.h  nano.h  nem.c  options.h  rand.cpp  rand.h  scrypt.c  segwit_addr.c  segwit_addr.h  sha3.c
src/utils/trezor-crypto/aes/: aes_modes.c  aescrypt.c  aestab.c
src/utils/trezor-crypto/chacha20poly1305/: chacha20poly1305.c  poly1305-donna.c
src/utils/trezor-crypto/ed25519-donna/: curve25519-donna-32bit.c  curve25519-donna-scalarmult-base.c  ed25519-blake2b.c  ed25519-blake2b.h  ed25519-donna-impl-base.c  ed25519-donna.h  ed25519-hash-custom-blake2b.h  ed25519-sha3.h
src/utils/trezor-crypto/monero/: base58.c  base58.h
src/utils/trezor-crypto/sodium/: keypair.c
var/: TECHNICAL-MPC.md  node.json
var/algorithms/: Composition of ECC keypairs.py  Composition of ECDSA keypairs.py  Fork possibility.js  Post-quantum ECC DSS algorithm tweak.py  Post-quantum ECDSA tweak.py  Post-quantum PLS.py
var/documents/: BUILD-DOCKER.md  BUILD-MANUAL.md  TECHNICAL-MPC.md
var/integration/: cheatsheet-bitcoin.json  cheatsheet-ethereum.json  docker-compose.yml  integration.json
var/integration/utils/: package.json  ripple.js  stellar.js  tron.js
(+60 files in other folders)
